`ReturnDataView.{preeq,posteq}_status` to `list[SteadyStateStatus]`; squeeze numsteps
* `ReturnDataView.posteq_numsteps` and `ReturnDataView.posteq_numsteps` now
  return a one-dimensional array of shape `(num_timepoints,)` instead of a
  two-dimensional array of shape `(1, num_timepoints)`.
* `ReturnDataView.posteq_status` and `ReturnDataView.preeq_status` now
  return `list[SteadyStateStatus]` instead of an `ndarray[int]` of shape
  `(1, 3)`.
  Closes #1944.

--- a/doc/examples/example_errors.ipynb
+++ b/doc/examples/example_errors.ipynb
@@ -32,7 +32,6 @@
     "    SensitivityMethod,\n",
     "    SensitivityOrder,\n",
     "    runAmiciSimulation,\n",
-    "    SteadyStateStatus,\n",
     ")\n",
     "from amici.petab.petab_import import import_petab_problem\n",
     "from amici.petab.simulations import simulate_petab, RDATAS, EDATAS\n",
@@ -921,7 +920,7 @@
    "outputs": [],
    "source": [
     "rdata = res[RDATAS][0]\n",
-    "list(map(SteadyStateStatus, rdata.preeq_status.flatten()))"
+    "rdata.preeq_status"
    ]
   },
   {
@@ -968,9 +967,7 @@
     ")\n",
     "\n",
     "rdata = res[RDATAS][0]\n",
-    "print(\n",
-    "    f\"preeq_status={list(map(SteadyStateStatus, rdata.preeq_status.flatten()))}\"\n",
-    ")\n",
+    "print(f\"preeq_status={rdata.preeq_status}\")\n",
     "print(f\"{rdata.preeq_numsteps=}\")\n",
     "\n",
     "# hard to reproduce on GHA\n",
@@ -1015,9 +1012,7 @@
     ")\n",
     "\n",
     "rdata = res[RDATAS][0]\n",
-    "print(\n",
-    "    f\"preeq_status={list(map(SteadyStateStatus, rdata.preeq_status.flatten()))}\"\n",
-    ")\n",
+    "print(f\"preeq_status={rdata.preeq_status}\")\n",
     "print(f\"{rdata.preeq_numsteps=}\")\n",
     "assert all(rdata.status == amici.AMICI_SUCCESS for rdata in res[RDATAS])"
    ]
@@ -1056,9 +1051,7 @@
     ")\n",
     "\n",
     "rdata = res[RDATAS][0]\n",
-    "print(\n",
-    "    f\"preeq_status={list(map(SteadyStateStatus, rdata.preeq_status.flatten()))}\"\n",
-    ")\n",
+    "print(f\"preeq_status={rdata.preeq_status}\")\n",
     "print(f\"{rdata.preeq_numsteps=}\")\n",
     "# hard to reproduce on GHA\n",
     "if os.getenv(\"GITHUB_ACTIONS\") is None:\n",
