--- a/doc/examples/example_steady_states/ExampleEquilibrationLogic.ipynb
+++ b/doc/examples/example_steady_states/ExampleEquilibrationLogic.ipynb
@@ -332,23 +332,21 @@
    "source": [
     "The `x` value contains state values corresponding to the time points that were set for the model simulation. In this case, it is the state values at $t=\\infty$, i.e., the steady state. One can also see that `xdot` values are equal to zero or very small, which means that the steady-state condition ($\\dot{x} \\approx 0$) is fulfilled. The actual weighted root-mean-square of the right-hand side when steady state was reached is reported in `posteq_wrms`.\n",
     "\n",
-    "The fields `posteq_status` and `posteq_numsteps` in `rdata` tell us how post-equilibration worked. In both arrays each entry is, respectively, the status or the number of steps taken for\n",
+    "The fields `posteq_status` and `posteq_numsteps` in `rdata` tell us how post-equilibration worked. In both lists each entry is, respectively, the status or the number of steps taken for\n",
     "\n",
     "  1. the Newton's method run;\n",
     "  2. the numerical integration run;\n",
     "  3. the second Newton's method run, starting from the simulation results.\n",
     "\n",
-    "The status is encoded as an integer flag with the following meanings:\n",
+    "The status is of type `SteadyStateStatus` with the following meanings:\n",
     "\n",
-    "  * ` 1`: Successful run\n",
-    "  * ` 0`: Did not run\n",
-    "  * `-1`: Error: No further specification is given, the error message should give more information.\n",
-    "  * `-2`: Error: The method did not converge to a steady state within the maximum number of steps (Newton's method or simulation).\n",
-    "  * `-3`: Error: The Jacobian of the right hand side is singular (only Newton's method)\n",
-    "  * `-4`: Error: The damping factor in Newton's method was reduced until it met the lower bound without success (Newton's method only)\n",
-    "  * `-5`: Error: The model was simulated past the timepoint `t=1e100` without finding a steady state. Therefore, it is likely that the model has no steady state for the given parameter vector.\n",
-    "\n",
-    "  Don't check the integer values directly, but use the `SteadyStateStatus` enum instead, which is more readable and stable:\n"
+    "  * `SteadyStateStatus.success`: Successful run\n",
+    "  * `SteadyStateStatus.not_run`: Did not run\n",
+    "  * `SteadyStateStatus.failed`: Error: No further specification is given, the error message should give more information.\n",
+    "  * `SteadyStateStatus.failed_convergence`: Error: The method did not converge to a steady state within the maximum number of steps (Newton's method or simulation).\n",
+    "  * `SteadyStateStatus.failed_factorization`: Error: The Jacobian of the right hand side is singular (only Newton's method)\n",
+    "  * `SteadyStateStatus.failed_damping`: Error: The damping factor in Newton's method was reduced until it met the lower bound without success (Newton's method only)\n",
+    "  * `SteadyStateStatus.failed_too_long_simulation`: Error: The model was simulated past the timepoint `t=1e100` without finding a steady state. Therefore, it is likely that the model has no steady state for the given parameter vector.\n"
    ]
   },
   {
@@ -440,7 +438,7 @@
     "solver_reduced.setMaxSteps(100)\n",
     "rdata_reduced = runAmiciSimulation(model_reduced, solver_reduced)\n",
     "assert rdata_reduced.status == AMICI_SUCCESS\n",
-    "assert rdata_reduced.posteq_status[0][0] == SteadyStateStatus.success\n",
+    "assert rdata_reduced.posteq_status[0] == SteadyStateStatus.success\n",
     "print(\n",
     "    \"Simulation status:\",\n",
     "    simulation_status_to_str(rdata_reduced[\"status\"]),\n",
@@ -673,7 +671,7 @@
     "solver_reduced.setMaxSteps(1000)\n",
     "rdata_reduced = runAmiciSimulation(model_reduced, solver_reduced)\n",
     "assert rdata_reduced.status == AMICI_SUCCESS\n",
-    "assert list(rdata_reduced.posteq_status[0]) == [\n",
+    "assert rdata_reduced.posteq_status == [\n",
     "    SteadyStateStatus.success,\n",
     "    SteadyStateStatus.not_run,\n",
     "    SteadyStateStatus.not_run,\n",
@@ -903,7 +901,7 @@
     "solver.setSensitivityOrder(SensitivityOrder.first)\n",
     "rdata = runAmiciSimulation(model, solver, edata)\n",
     "assert rdata.status == AMICI_SUCCESS\n",
-    "assert list(rdata.preeq_status[0]) == [\n",
+    "assert rdata.preeq_status == [\n",
     "    SteadyStateStatus.failed_factorization,\n",
     "    SteadyStateStatus.success,\n",
     "    SteadyStateStatus.not_run,\n",
@@ -970,7 +968,7 @@
     "rdata_reduced = runAmiciSimulation(model_reduced, solver_reduced, edata)\n",
     "\n",
     "assert rdata_reduced.status == AMICI_SUCCESS\n",
-    "assert list(rdata_reduced.preeq_status[0]) == [\n",
+    "assert rdata_reduced.preeq_status == [\n",
     "    SteadyStateStatus.success,\n",
     "    SteadyStateStatus.not_run,\n",
     "    SteadyStateStatus.not_run,\n",
@@ -995,7 +993,7 @@
     "rdata_reduced = runAmiciSimulation(model_reduced, solver_reduced, edata)\n",
     "\n",
     "assert rdata_reduced.status == AMICI_SUCCESS\n",
-    "assert list(rdata_reduced.preeq_status[0]) == [\n",
+    "assert rdata_reduced.preeq_status == [\n",
     "    SteadyStateStatus.not_run,\n",
     "    SteadyStateStatus.success,\n",
     "    SteadyStateStatus.not_run,\n",
@@ -1022,7 +1020,7 @@
     "solver_reduced.setSensitivityOrder(SensitivityOrder.first)\n",
     "rdata_reduced = runAmiciSimulation(model_reduced, solver_reduced, edata)\n",
     "assert rdata_reduced.status == AMICI_SUCCESS\n",
-    "assert list(rdata_reduced.preeq_status[0]) == [\n",
+    "assert rdata_reduced.preeq_status == [\n",
     "    SteadyStateStatus.success,\n",
     "    SteadyStateStatus.not_run,\n",
     "    SteadyStateStatus.not_run,\n",
@@ -1054,7 +1052,7 @@
     "solver.setSensitivityOrder(SensitivityOrder.first)\n",
     "rdata = runAmiciSimulation(model, solver, edata)\n",
     "assert rdata.status == AMICI_SUCCESS\n",
-    "assert list(rdata.preeq_status[0]) == [\n",
+    "assert rdata.preeq_status == [\n",
     "    SteadyStateStatus.failed_factorization,\n",
     "    SteadyStateStatus.success,\n",
     "    SteadyStateStatus.not_run,\n",
