Combine observables, sigmas and noise distributions parameters for model import
Combine observables, sigmas and noise distributions parameters for model import.

Closes #2923.

--- a/doc/examples/example_presimulation/ExampleExperimentalConditions.ipynb
+++ b/doc/examples/example_presimulation/ExampleExperimentalConditions.ipynb
@@ -189,9 +189,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "The SBML model specifies a single observable named `pPROT` which describes the fraction of phosphorylated Protein. We load this observable using [amici.assignmentRules2observables](https://amici.readthedocs.io/en/latest/generated/amici.sbml_import.html#amici.sbml_import.assignmentRules2observables)."
-   ]
+   "source": "The SBML model specifies a single observable named `pPROT` which describes the fraction of phosphorylated Protein. We load this observable using [amici.assignment_rules_to_observables](https://amici.readthedocs.io/en/latest/generated/amici.sbml_import.html#amici.sbml_import.assignment_rules_to_observables)."
   },
   {
    "cell_type": "code",
@@ -211,7 +209,7 @@
    ],
    "source": [
     "# Retrieve model output names and formulae from AssignmentRules and remove the respective rules\n",
-    "observables = amici.assignmentRules2observables(\n",
+    "observables = amici.assignment_rules_to_observables(\n",
     "    sbml_importer.sbml,  # the libsbml model object\n",
     "    filter_function=lambda variable: variable.getName() == \"pPROT\",\n",
     ")\n",
@@ -236,7 +234,7 @@
     "    model_name,\n",
     "    model_output_dir,\n",
     "    verbose=False,\n",
-    "    observables=observables,\n",
+    "    observation_model=observables,\n",
     "    constant_parameters=fixedParameters,\n",
     ")\n",
     "# load the generated module\n",
@@ -292,7 +290,7 @@
     "# Run simulation using default model parameters and solver options\n",
     "model.setTimepoints(np.linspace(0, 60, 60))\n",
     "rdata = amici.runAmiciSimulation(model, solver)\n",
-    "amici.plotting.plotObservableTrajectories(rdata)"
+    "amici.plotting.plot_observable_trajectories(rdata)"
    ]
   },
   {
@@ -324,7 +322,7 @@
     "edata = amici.ExpData(rdata, 0.1, 0.0)\n",
     "edata.fixedParameters = [0, 2]\n",
     "rdata = amici.runAmiciSimulation(model, solver, edata)\n",
-    "amici.plotting.plotObservableTrajectories(rdata)"
+    "amici.plotting.plot_observable_trajectories(rdata)"
    ]
   },
   {
@@ -356,7 +354,7 @@
    "source": [
     "edata.fixedParametersPreequilibration = [3, 0]\n",
     "rdata = amici.runAmiciSimulation(model, solver, edata)\n",
-    "amici.plotting.plotObservableTrajectories(rdata)"
+    "amici.plotting.plot_observable_trajectories(rdata)"
    ]
   },
   {
@@ -404,7 +402,7 @@
    ],
    "source": [
     "rdata = amici.runAmiciSimulation(model, solver, edata)\n",
-    "amici.plotting.plotObservableTrajectories(rdata)"
+    "amici.plotting.plot_observable_trajectories(rdata)"
    ]
   },
   {
@@ -449,7 +447,7 @@
     "print(edata.fixedParametersPresimulation)\n",
     "print(edata.fixedParameters)\n",
     "rdata = amici.runAmiciSimulation(model, solver, edata)\n",
-    "amici.plotting.plotObservableTrajectories(rdata)"
+    "amici.plotting.plot_observable_trajectories(rdata)"
    ]
   }
  ],
