--- a/doc/examples/example_steady_states/ExampleEquilibrationLogic.ipynb
+++ b/doc/examples/example_steady_states/ExampleEquilibrationLogic.ipynb
@@ -80,7 +80,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Import necessary libraries and define the model\n",
     "import amici\n",
@@ -107,6 +109,7 @@
     "    AMICI_SUCCESS,\n",
     "    AMICI_ERROR,\n",
     "    ExpData,\n",
+    "    MeasurementChannel as MC,\n",
     ")\n",
     "\n",
     "# We encode the model in Antimony format (https://tellurium.readthedocs.io/en/latest/antimony.html),\n",
@@ -156,23 +159,23 @@
     "temp_dir = Path(tempfile.mkdtemp())\n",
     "model_output_dir = temp_dir / model_name\n",
     "model_reduced_output_dir = temp_dir / model_reduced_name"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Import the model\n",
     "sbml_importer = amici.SbmlImporter(antimony2sbml(ant_model), from_file=False)\n",
     "\n",
     "# specify observables and constant parameters\n",
     "constant_parameters = [\"synthesis_substrate\", \"init_enzyme\"]\n",
-    "observables = {\n",
-    "    \"observable_product\": {\"name\": \"\", \"formula\": \"product\"},\n",
-    "    \"observable_substrate\": {\"name\": \"\", \"formula\": \"substrate\"},\n",
-    "}\n",
+    "observation_model = [\n",
+    "    MC(id_=\"observable_product\", name=\"\", formula=\"product\"),\n",
+    "    MC(id_=\"observable_substrate\", name=\"\", formula=\"substrate\"),\n",
+    "]\n",
     "sigmas = {\"observable_product\": 1.0, \"observable_substrate\": 1.0}\n",
     "\n",
     "# import the model without handled the conserved quantity\n",
@@ -181,9 +184,8 @@
     "sbml_importer.sbml2amici(\n",
     "    model_name,\n",
     "    model_output_dir,\n",
-    "    observables=observables,\n",
+    "    observation_model=observation_model,\n",
     "    constant_parameters=constant_parameters,\n",
-    "    sigmas=sigmas,\n",
     "    compute_conservation_laws=False,\n",
     ")\n",
     "\n",
@@ -192,17 +194,16 @@
     "sbml_importer.sbml2amici(\n",
     "    model_reduced_name,\n",
     "    model_reduced_output_dir,\n",
-    "    observables=observables,\n",
+    "    observation_model=observation_model,\n",
     "    constant_parameters=constant_parameters,\n",
-    "    sigmas=sigmas,\n",
     ")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# import the models and run some test simulations\n",
     "model_reduced_module = import_model_module(\n",
@@ -232,22 +233,20 @@
     "plot_state_trajectories(rdata_reduced, model=model_reduced, ax=axes[0, 1])\n",
     "plot_observable_trajectories(rdata_reduced, model=model_reduced, ax=axes[1, 1])\n",
     "fig.tight_layout()"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# the enzyme state was removed from the ODEs of the reduced model\n",
     "print(model.getStateIdsSolver())\n",
     "print(model_reduced.getStateIdsSolver())\n",
     "print(model.getStateIds())\n",
     "print(model_reduced.getStateIds())"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -291,9 +290,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
+   "outputs": [],
    "source": [
     "# Call post-equilibration by setting an infinity timepoint\n",
     "model.setTimepoints([np.inf])\n",
@@ -322,9 +323,7 @@
     "    \"posteq_cpu_timeB\",\n",
     "]:\n",
     "    print(f\"{key:>16}: {rdata[key]}\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -350,15 +349,17 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "list(SteadyStateStatus)",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "list(SteadyStateStatus)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "In our case, only the second entry of `posteq_status` contains a positive integer:\n",
     "The first run of Newton's method failed due to a Jacobian, which could not be factorized, but the second run (simulation) contains the entry `1` (success).\n",
@@ -372,7 +373,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# steady state value found by pre-equilibration\n",
     "steady_state = rdata[\"x\"][0]\n",
@@ -384,9 +387,7 @@
     "\n",
     "for stst_value in steady_state:\n",
     "    plt.axhline(y=stst_value, color=\"gray\", linestyle=\"--\", linewidth=1)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -397,7 +398,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# reduce maxsteps for integration\n",
     "model.setTimepoints([np.inf])\n",
@@ -409,9 +412,7 @@
     "print(\n",
     "    \"Number of steps employed in post-equilibration:\", rdata[\"posteq_numsteps\"]\n",
     ")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -423,9 +424,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
+   "outputs": [],
    "source": [
     "model_reduced.setTimepoints([np.inf])\n",
     "model_reduced.setSteadyStateComputationMode(\n",
@@ -449,9 +452,7 @@
     "    \"Number of steps employed in post-equilibration:\",\n",
     "    rdata_reduced[\"posteq_numsteps\"],\n",
     ")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -464,7 +465,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# create edata, with 3 timepoints and 2 observables:\n",
     "edata = ExpData(2, 0, 0, np.array([0.0, 0.1, 1.0]))\n",
@@ -473,15 +476,15 @@
     "# set parameters for pre-equilibration\n",
     "edata.fixedParametersPreequilibration = np.array([0.0, 2.0])\n",
     "edata.reinitializeFixedParameterInitialStates = True"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
    "source": [
     "# create the solver object and run the simulation\n",
     "solver_reduced = model_reduced.getSolver()\n",
@@ -503,9 +506,7 @@
     "\n",
     "plot_state_trajectories(rdata_reduced, model=model_reduced)\n",
     "plot_observable_trajectories(rdata_reduced, model=model_reduced)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -519,7 +520,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Change the last timepoint to an infinity timepoint.\n",
     "edata.setTimepoints(np.array([0.0, 0.1, float(\"inf\")]))\n",
@@ -527,9 +530,7 @@
     "# run the simulation\n",
     "rdata_reduced = runAmiciSimulation(model_reduced, solver_reduced, edata)\n",
     "assert rdata_reduced.status == AMICI_SUCCESS"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -581,9 +582,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
+   "outputs": [],
    "source": [
     "# Call simulation with singular Jacobian and `integrateIfNewtonFails` mode\n",
     "model.setTimepoints([np.inf])\n",
@@ -605,9 +608,7 @@
     ")\n",
     "print(\"Computed state sensitivities:\")\n",
     "print(rdata[\"sx\"][0, :, :])"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -619,7 +620,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Call simulation with singular Jacobian and newtonOnly mode (will fail)\n",
     "model.setTimepoints([np.inf])\n",
@@ -640,9 +643,7 @@
     ")\n",
     "print(\"Computed state sensitivities:\")\n",
     "print(rdata[\"sx\"][0, :, :])"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -655,9 +656,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
    "source": [
     "# Try `newtonOnly` option with reduced model\n",
     "model_reduced.setTimepoints([np.inf])\n",
@@ -689,9 +692,7 @@
     ")\n",
     "print(\"Computed state sensitivities:\")\n",
     "print(rdata_reduced[\"sx\"][0, :, :])"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -765,7 +766,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Call post-equilibration and sensitivities computation using adjoint sensitivity analysis\n",
     "# by setting an infinity timepoint\n",
@@ -798,9 +801,7 @@
     "    rdata_reduced[\"posteq_numstepsB\"],\n",
     ")\n",
     "print(\"Computed gradient:\", rdata_reduced[\"sllh\"])"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -812,7 +813,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Call adjoint post-equilibration with model with singular Jacobian\n",
     "model.setSteadyStateSensitivityMode(SteadyStateSensitivityMode.newtonOnly)\n",
@@ -833,9 +836,7 @@
     "    rdata[\"posteq_numstepsB\"],\n",
     ")\n",
     "print(\"Computed gradient:\", rdata[\"sllh\"])"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -856,9 +857,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
+   "outputs": [],
    "source": [
     "# No post-equilibration this time.\n",
     "# create edata, with 3 timepoints and 2 observables:\n",
@@ -881,15 +884,15 @@
     "for key, value in rdata.items():\n",
     "    if key[0:6] == \"preeq_\":\n",
     "        print(f\"{key:20s}:\", value)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
+   "outputs": [],
    "source": [
     "# Singular Jacobian, use simulation\n",
     "model.setSteadyStateSensitivityMode(\n",
@@ -910,13 +913,13 @@
     "for key, value in rdata.items():\n",
     "    if key[0:6] == \"preeq_\":\n",
     "        print(f\"{key:20s}:\", value)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Non-singular Jacobian, use Newton solver\n",
     "solver_reduced = model_reduced.getSolver()\n",
@@ -928,9 +931,7 @@
     "for key, value in rdata_reduced.items():\n",
     "    if key[0:6] == \"preeq_\":\n",
     "        print(f\"{key:20s}:\", value)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -958,7 +959,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Non-singular Jacobian, use Newton solver and adjoints with initial state sensitivities\n",
     "solver_reduced = model_reduced.getSolver()\n",
@@ -977,13 +980,13 @@
     "    if key[0:6] == \"preeq_\":\n",
     "        print(f\"{key:20s}:\", value)\n",
     "print(\"Gradient:\", rdata_reduced[\"sllh\"])"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Non-singular Jacobian, use simulation solver and adjoints with initial state sensitivities\n",
     "solver_reduced = model_reduced.getSolver()\n",
@@ -1004,13 +1007,13 @@
     "    if key[0:6] == \"preeq_\":\n",
     "        print(f\"{key:20s}:\", value)\n",
     "print(\"Gradient:\", rdata_reduced[\"sllh\"])"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Non-singular Jacobian, use Newton solver and adjoints with fully adjoint pre-equilibration\n",
     "solver_reduced = model_reduced.getSolver()\n",
@@ -1031,9 +1034,7 @@
     "    if key[0:6] == \"preeq_\":\n",
     "        print(f\"{key:20s}:\", value)\n",
     "print(\"Gradient:\", rdata_reduced[\"sllh\"])"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1042,7 +1043,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Singular Jacobian, use try Newton solver and adjoints with fully adjoint pre-equilibration\n",
     "solver = model.getSolver()\n",
@@ -1063,9 +1066,7 @@
     "    if key[0:6] == \"preeq_\":\n",
     "        print(f\"{key:20s}:\", value)\n",
     "print(\"Gradient:\", rdata[\"sllh\"])"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1087,11 +1088,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
+   "outputs": [],
    "source": [
     "# Non-singular Jacobian, use simulation\n",
     "model_reduced.setSteadyStateSensitivityMode(\n",
@@ -1128,9 +1131,7 @@
     "print(\"\\nCPU time to reach steady state (ms):\")\n",
     "print(\"  lax tolerances:   \", rdata_reduced_lax[\"preeq_cpu_time\"])\n",
     "print(\"  strict tolerances:\", rdata_reduced_strict[\"preeq_cpu_time\"])"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   }
  ],
  "metadata": {
