--- a/doc/examples/getting_started/GettingStarted.ipynb
+++ b/doc/examples/getting_started/GettingStarted.ipynb
@@ -21,14 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
    "source": [
     "import amici\n",
     "\n",
     "sbml_importer = amici.SbmlImporter(\"model_steadystate_scaled.xml\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -39,14 +39,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
    "source": [
     "model_name = \"model_steadystate\"\n",
     "model_dir = \"model_dir\"\n",
     "sbml_importer.sbml2amici(model_name, model_dir)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -58,9 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# load the model module\n",
     "model_module = amici.import_model_module(model_name, model_dir)\n",
@@ -68,7 +66,9 @@
     "model = model_module.get_model()\n",
     "# instantiate solver\n",
     "solver = model.create_solver()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -77,10 +77,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
+   "source": "model.set_parameter_by_name(\"p1\", 1e-3)",
    "outputs": [],
-   "source": "model.set_parameter_by_name(\"p1\", 1e-3)"
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -89,10 +89,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
    "metadata": {},
+   "source": "solver.set_absolute_tolerance(1e-10)",
    "outputs": [],
-   "source": "solver.set_absolute_tolerance(1e-10)"
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -104,18 +104,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "Model simulations can be executed using the [amici.run_simulation](https://amici.readthedocs.io/en/latest/generated/amici.html#amici.run_simulation) routine. By default, the model does not contain any timepoints for which the model is to be simulated. Here we define a simulation timecourse with two timepoints at `0` and `1` and then run the simulation."
+   "source": "Model simulations can be executed using the [Model.simulate](https://amici.readthedocs.io/en/latest/generated/amici.amici.html#amici.amici.Model.simulate) method (or, alternatively, [amici.run_simulation](https://amici.readthedocs.io/en/latest/generated/amici.html#amici.run_simulation)). By default, the model does not contain any output timepoints for which the model is to be simulated. Here we define a simulation timecourse with two output timepoints at `0` and `1` and then run the simulation."
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# set timepoints\n",
     "model.set_timepoints([0, 1])\n",
-    "rdata = amici.run_simulation(model, solver)"
-   ]
+    "rdata = model.simulate(solver=solver)"
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -126,24 +126,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.1       , 0.4       , 0.7       ],\n",
-       "       [0.98208413, 0.51167992, 0.10633388]])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "rdata.x"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -152,21 +140,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('x1', 'x2', 'x3')"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": "model.get_state_names()"
+   "source": "model.get_state_names()",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "For convenience, most results stored in `ReturnData` can also be retrieved as [xarray.DataArray](https://docs.xarray.dev/en/stable/index.html) objects that already include the respective row and column names. This can be accessed via the `xr` attribute of `ReturnData`. Here, we access the model state `x` as `DataArray` object to convert it to a `pandas.DataFrame`:"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "rdata.xr.x.to_pandas()",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
