update jax petab notebook

--- a/doc/examples/example_jax_petab/ExampleJaxPEtab.ipynb
+++ b/doc/examples/example_jax_petab/ExampleJaxPEtab.ipynb
@@ -82,7 +82,9 @@
    "cell_type": "markdown",
    "id": "415962751301c64a",
    "metadata": {},
-   "source": "This simulates the model for all conditions using the nominal parameter values. Simple, right? Now, let’s take a look at the simulation results."
+   "source": [
+    "This simulates the model for all conditions using the nominal parameter values. Simple, right? Now, let’s take a look at the simulation results."
+   ]
   },
   {
    "cell_type": "code",
@@ -94,7 +96,9 @@
     "simulation_condition = (\"model1_data1\",)\n",
     "\n",
     "# Access the results for the specified condition\n",
-    "results[simulation_condition]"
+    "ic = results[\"simulation_conditions\"].index(simulation_condition)\n",
+    "print(\"llh: \", results[\"llh\"][ic])\n",
+    "print(\"state variables: \", results[\"x\"][ic, :])"
    ]
   },
   {
@@ -129,7 +133,9 @@
    "cell_type": "markdown",
    "id": "fe4d3b40ee3efdf2",
    "metadata": {},
-   "source": "Success! The simulation completed successfully, and we can now plot the resulting state trajectories."
+   "source": [
+    "Success! The simulation completed successfully, and we can now plot the resulting state trajectories."
+   ]
   },
   {
    "cell_type": "code",
@@ -180,7 +186,9 @@
    "cell_type": "markdown",
    "id": "4fa97c33719c2277",
    "metadata": {},
-   "source": "`run_simulations` enables users to specify the simulation conditions to be executed. For more complex models, this allows for restricting simulations to a subset of conditions. Since the Böhm model includes only a single condition, we demonstrate this functionality by simulating no condition at all."
+   "source": [
+    "`run_simulations` enables users to specify the simulation conditions to be executed. For more complex models, this allows for restricting simulations to a subset of conditions. Since the Böhm model includes only a single condition, we demonstrate this functionality by simulating no condition at all."
+   ]
   },
   {
    "cell_type": "code",
@@ -283,7 +291,9 @@
    "cell_type": "markdown",
    "id": "dc9bc07cde00a926",
    "metadata": {},
-   "source": "Fortunately, `equinox` simplifies this process by offering [filter_grad](https://docs.kidger.site/equinox/api/transformations/#equinox.filter_grad), which enables autodiff functionality that is compatible with `JAXProblem` and, in theory, also with `JAXModel`."
+   "source": [
+    "Fortunately, `equinox` simplifies this process by offering [filter_grad](https://docs.kidger.site/equinox/api/transformations/#equinox.filter_grad), which enables autodiff functionality that is compatible with `JAXProblem` and, in theory, also with `JAXModel`."
+   ]
   },
   {
    "cell_type": "code",
@@ -302,7 +312,9 @@
    "cell_type": "markdown",
    "id": "851c3ec94cb5d086",
    "metadata": {},
-   "source": "Functions transformed by `filter_grad` return gradients that share the same structure as the first argument (unless specified otherwise). This allows us to access the gradient with respect to the parameters attribute directly `via grad.parameters`."
+   "source": [
+    "Functions transformed by `filter_grad` return gradients that share the same structure as the first argument (unless specified otherwise). This allows us to access the gradient with respect to the parameters attribute directly `via grad.parameters`."
+   ]
   },
   {
    "cell_type": "code",
@@ -318,7 +330,9 @@
    "cell_type": "markdown",
    "id": "375b835fecc5a022",
    "metadata": {},
-   "source": "Attributes for which derivatives cannot be computed (typically anything that is not a [jax.numpy.array](https://jax.readthedocs.io/en/latest/_autosummary/jax.numpy.array.html)) are automatically set to `None`."
+   "source": [
+    "Attributes for which derivatives cannot be computed (typically anything that is not a [jax.numpy.array](https://jax.readthedocs.io/en/latest/_autosummary/jax.numpy.array.html)) are automatically set to `None`."
+   ]
   },
   {
    "cell_type": "code",
@@ -334,7 +348,9 @@
    "cell_type": "markdown",
    "id": "8eb7cc3db510c826",
    "metadata": {},
-   "source": "Observant readers may notice that the gradient above appears to include numeric values for derivatives with respect to some measurements. However, `simulation_conditions` internally disables gradient computations using `jax.lax.stop_gradient`, resulting in these values being zeroed out."
+   "source": [
+    "Observant readers may notice that the gradient above appears to include numeric values for derivatives with respect to some measurements. However, `simulation_conditions` internally disables gradient computations using `jax.lax.stop_gradient`, resulting in these values being zeroed out."
+   ]
   },
   {
    "cell_type": "code",
@@ -342,14 +358,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grad._measurements[simulation_condition]"
+    "grad._my[ic, :]"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "58eb04393a1463d",
    "metadata": {},
-   "source": "However, we can compute derivatives with respect to data elements using `JAXModel.simulate_condition`. In the example below, we differentiate the observables `y` (specified by passing `y` to the `ret` argument) with respect to the timepoints at which the model outputs are computed after the solving the differential equation. While this might not be particularly practical, it serves as an nice illustration of the power of automatic differentiation."
+   "source": [
+    "However, we can compute derivatives with respect to data elements using `JAXModel.simulate_condition`. In the example below, we differentiate the observables `y` (specified by passing `y` to the `ret` argument) with respect to the timepoints at which the model outputs are computed after the solving the differential equation. While this might not be particularly practical, it serves as an nice illustration of the power of automatic differentiation."
+   ]
   },
   {
    "cell_type": "code",
@@ -671,8 +689,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
